style.css
<style shim-shadowdom>
  
    body {
        transition: opacity ease-in 0.2s; 
        font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
        margin: 0;
        padding: 0;
    }
    
    body.core-narrow {
      padding: 12px;
    }

    .toolbar {
      z-index: 1;
      @apply(--shadow-elevation-2dp);
    }

    .profile-picture {
        width: 140px;
        height: 140px;
        border-radius: 100px;
        -webkit-border-radius: 100px;
        -moz-border-radius: 100px;
        background: url(profile_picture.jpeg) no-repeat;
        background-size: contain;
        box-shadow: 0 0 8px rgba(0, 0, 0, .8);
        -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
        -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
        margin-left: auto;
        margin-right: auto;
        margin-top: 15px;
    }
    
    .fa {
        margin: 5px;
    }

    .icon-container {
        width: 100%;
        text-align:center;
        position:relative;
        float:left;
    }

    .content
    {
      height: 100vh;
      background: #ededed;
      position: relative;
      z-index: 2;
      -webkit-transform:translateZ(2px);
      -moz-transform:translateZ(2px);
      -o-transform:translateZ(2px);
      transform:translateZ(2px);
    }

    h1{
      width: 100%;
      padding: 0;
      margin: 0;
      padding-top: 10px;
      padding-bottom: 10px;
      text-align: center;
      font-size: 25px;
      color: #B3E5FC;
      float:left;
    }

    .hvr-grow {
      display: inline-block;
      vertical-align: middle;
      -webkit-transform: translateZ(0);
      transform: translateZ(0);
      box-shadow: 0 0 1px rgba(0, 0, 0, 0);
      -webkit-backface-visibility: hidden;
      backface-visibility: hidden;
      -moz-osx-font-smoothing: grayscale;
      -webkit-transition-duration: 0.3s;
      transition-duration: 0.3s;
      -webkit-transition-property: transform;
      transition-property: transform;
    }
    .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
      -webkit-transform: scale(1.1);
      transform: scale(1.1);
    }


    paper-scroll-header-panel {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      background-color: var(--paper-grey-200, #eee);
      /* background for toolbar when it is at its full size */
      --paper-scroll-header-panel-full-header: {
        background-color: #29B6F6;
      };
      /* background for toolbar when it is condensed */
      --paper-scroll-header-panel-condensed-header: {
        background-color: var(--paper-deep-orange-500, #ff5722);
      };
    }

    paper-toolbar.really-tall {
      height: 250px;
      background-color: #29B6F6;
    }

    paper-toolbar.tall .title {
      font-size: 40px;
      margin-left: 60px;
      -webkit-transform-origin: left center;
      transform-origin: left center;
    }

    .toolbar-content-container {
        z-index: 0;
        height: 250px;
        width: 100%;
        margin-top: 180px;
    }

</style>

